--- a/.env.example
+++ b/.env.example
@@ -20,16 +20,18 @@ DB_PASSWORD=your-secure-database-password
 DB_CONNECT_TIMEOUT=10000
 DB_SSL_MODE=prefer
 
-# OAuth Providers (if you implement them)
-# DISCORD_CLIENT_ID=
-# DISCORD_CLIENT_SECRET=
-# GOOGLE_CLIENT_ID=
-# GOOGLE_CLIENT_SECRET=
-# GITHUB_CLIENT_ID=
-# GITHUB_CLIENT_SECRET=
+# NextAuth Configuration
+NEXTAUTH_URL=your-nextauth-url
+# IMPORTANT: Generate a strong, unique secret for NextAuth
+# You can use: openssl rand -base64 32
+NEXTAUTH_SECRET=your-nextauth-secret-key
 
-# Email (if you implement email features)
-# SMTP_HOST=
-# SMTP_PORT=
-# SMTP_USER=
-# SMTP_PASS=
+# OAuth Providers
+GOOGLE_CLIENT_ID=your-google-client-id-here
+GOOGLE_CLIENT_SECRET=your-google-client-secret-here
+
+DISCORD_CLIENT_ID=your-discord-client-id-here
+DISCORD_CLIENT_SECRET=your-discord-client-secret-here
+
+GITHUB_CLIENT_ID=your-github-client-id-here
+GITHUB_CLIENT_SECRET=your-github-client-secret-here
